--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,2 +1,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.clear{
+  clear:both;
+}
+
+.my_headline_font_size{
+  font-size: 2100px;
+}
