--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,24 @@
 <body>
 <header>
   <div class = "col-xs-3">
-    Logo
+    <div class="circle">
+      <br>
+      You know
+      <br>
+      you need
+      <br>
+      to code
+    </div>
   </div>
-  <div class="col-xs-4">
+  <div class="col-xs-4 slogan">
     This is app
   </div>
-  <div class="col-xs-5">
+  <div class="col-xs-5 links">
     <%= link_to 'Contribute','#'%>
     <%= link_to 'About', '#'%>
   </div>
 </header>
+<hr>
 <br class="clear">
 <%= yield %>
 
