--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,6 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
+
 header{
   border-top:9px solid #222222; 
 }
@@ -42,8 +44,15 @@ hr{
 .links {
   padding-top:26px;
 }
+
 .links a{
   color:black;
   font-size:25px;
   border-bottom: 1px solid #dfdfdf;
+  font-family: 'alex_brushregular';
+  font-weight:bold;
+}
+
+h1{
+font-family: 'alex_brushregular';
 }
