--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -56,3 +56,12 @@ hr{
 h1{
 font-family: 'alex_brushregular';
 }
+.next-quote{
+  color:#f84342
+}
+.footer-blurb{
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  font-style: italic;
+  font-aligin: right;
+  font-size:10px;
+}
