--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -40,7 +40,10 @@ hr{
   font-style: italic;
   padding-top:26px;
 }
-
+.about{
+   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  font-style: italic;
+}
 .links {
   padding-top:26px;
 }
@@ -69,3 +72,4 @@ font-family: 'alex_brushregular';
 .logo:hover{
   text-decoration:none;
 }
+
