--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,13 @@
     </div>
   <% end -%> 
   </div>
-  <div class="col-xs-4 slogan">
+  <div class="col-sm-4 hidden-xs slogan">
     This is app
   </div>
-  <div class="col-xs-5 links">
+  <div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-sm-5 links">
   <!-- Button trigger modal -->
     <%= link_to 'Contribute', '#', data: {toggle: 'modal', target:'#myModal'} %>
+    &nbsp;&nbsp;
     <%= link_to 'About', about_path%>
   </div>
 </header>
@@ -40,16 +41,12 @@
       </div>
         <%= simple_form_for Quote.new do |f| %>
       <div class="modal-body">
-          <%= f.input :saying %>
-          <%= f.input :author %>
+          <%= f.input :saying, label: "What is the saying you want to add?", placeholder:"Fear is the desease" %><br>
+          <%= f.input :author, label: "What is the author you want to add?", placeholder:"Jon lenon" %>
           <br>
           <%= f.submit 'Create' , class: 'btn btn-danger'%>
-          </div>
-        <% end %>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
+        <% end %>
     </div>
   </div>
 </div>
@@ -66,10 +63,10 @@
 
 <div class="footer">
   <div class="container">
-    <div class="col-xs-6">
+    <div class="col-xs-12 col-sm-6">
       <%= link_to "This isn\'t enough" , root_path , class: 'next-quote' %>
     </div>
-    <div class="col-xs-6 footer-blurb">
+    <div class="col-xs-12 col-sm-6 footer-blurb">
       Proudly hacked in Tel aviv, by <a href="http://thefirehoseproject.com">Ryoma &amp; Tsuboi</a><br>
       Do you want to develop? <a href="http://thefirehoseproject.com">Learn more here</a>
     </div>
